--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Web site created using create-react-app"  />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,800;1,500&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="http://localhost:3000/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,400;0,500;0,800;1,500&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="https://cdn2.iconfinder.com/data/icons/social-media-and-payment/64/-03-512.png">
+    <link rel="stylesheet" href="https://ayila.netlify.app/style.css">
     <title>Social Media</title>
   </head>
   <body>
